[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchsde-brownian"
dynamic = ["version"]
description = "SDE solvers and stochastic adjoint sensitivity analysis in PyTorch."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.6"
authors = [
    { name = "Xuechen Li", email = "lxuechen@cs.stanford.edu" },
    { name = "Patrick Kidger", email = "hello@kidger.site" },
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.19",
    "torch>=1.6.0",
    "trampoline>=0.1.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy>=1.5",
]

[project.urls]
Homepage = "https://github.com/google-research/torchsde"

[tool.hatch.version]
path = "torchsde_brownian/__init__.py"

[tool.hatch.build]
include = [
    "/torchsde_brownian",
]
